--- a/now.json
+++ b/now.json
@@ -1,4 +1,4 @@
 {
   "version": 2,
-  "builds": [{ "src": "mai .js", "use": "@now/node-server" }],
+  "builds": [{ "src": "mai .js", "use": "@now/node-server" }]
 }
